Fill in Wireless80211Widget and WirelessSecuritySettingWidget with access point info when selecting one in ScanWidget.

BUG: 273762